feat: add signed geographic plot windows
